--- a/webapp/src/main/webapp/WEB-INF/viewer_wicket.properties
+++ b/webapp/src/main/webapp/WEB-INF/viewer_wicket.properties
@@ -49,3 +49,5 @@ isis.viewer.wicket.datePickerPattern=dd-mm-yy
 #isis.viewer.wicket.bookmarkedPages.maxSize=15
 
 #isis.viewer.wicket.regularCase=false
+
+isis.viewer.wicket.themes.showChooser=true
